Started working on a task

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,7 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  padding: 30px;
 }
 
 #search-box {
@@ -17,4 +18,17 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+.country-list {
+  list-style: none;
+  padding-left: 0;
+}
+.country-list li {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.country-list p {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
